Bug 77319 (IntegerErrorBars) - 'Constant value' option for error bars only accepts integer input
Summary: 'Constant value' option for error bars only accepts integer input
Status: RESOLVED FIXED
Alias: IntegerErrorBars
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.1.5.3 release
Hardware: All All
: medium normal
Assignee: Katarina Behrens
URL:
Whiteboard: target:4.4.0 target:4.3.4
Keywords:
: 70313 78044 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-04-11 09:33 UTC by BM-2cVqnDuYbAU5do2DfJTrN7ZbAJ246S4Xix
Modified: 2014-10-09 10:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BM-2cVqnDuYbAU5do2DfJTrN7ZbAJ246S4Xix 2014-04-11 09:33:41 UTC
When making a chart with constant value error bars, the error bars can only be of integer length. Decimal values are rounded to the nearest integer when entered. It should be possible to use decimal values.

To reproduce this bug:
1. Make a chart
2. Insert->X Error Bars... (or Y Error Bars...)
3. Click 'Constant Value' for Error Category
4. Under Parameters and Positive, type '0.5'.
5. Try to enter a value for Negative.
6. The Positive value should now have changed to '1'

(I'm using Debian's LibreOffice 4.1.5-2+b1 package)
Comment 1 BM-2cVqnDuYbAU5do2DfJTrN7ZbAJ246S4Xix 2014-04-11 22:44:41 UTC
For anyone else experiencing this problem, until this bug is fixed there is a workaround.

1. Fill a column with the desired decimal errors.
2. Under the error bars menu, select "Cell Range".
3. Enter the range of cells you just created (e.g. $Sheet1.$A$1:$A$10 )
4. LibreOffice should make the error bars the decimal length.
Comment 2 Jorendc 2014-05-16 20:58:45 UTC
*** Bug 70313 has been marked as a duplicate of this bug. ***
Comment 3 Jorendc 2014-05-16 21:00:29 UTC
*** Bug 78044 has been marked as a duplicate of this bug. ***
Comment 4 Jorendc 2014-05-16 21:01:11 UTC
See bug 78044 for a test document and clear description of this behavior.

Kind regards,
Joren
Comment 5 Commit Notification 2014-07-17 20:55:58 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e2107e76b9dbd1213b811960c86f8eae57457e5

fdo#77319: set spinbox value AFTER adjusting no. of decimal places



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 bruno.binet 2014-10-02 13:18:26 UTC
Is it possible to backport the fix in the 4.3 branch?
Comment 7 Katarina Behrens 2014-10-08 20:43:37 UTC
(In reply to bruno.binet from comment #6)
> Is it possible to backport the fix in the 4.3 branch?

It is - I've just requested a code review. But it doesn't really help you w/ the other bug 78048