fdo#77319: set spinbox value AFTER adjusting no. of decimal places

Doing it the other way round truncates the values

Change-Id: Ieb14c9d1b9dde496eac24737aced7c8da8ce1346